# disk-inventory

./: Cargo.toml  LICENSE  README.md
src/: config.rs  duplicates.rs  lib.rs  main.rs  models.rs  watcher.rs
src/cli/: mod.rs  output.rs
src/crawler/: mod.rs  platform.rs  walker.rs
src/daemon/: mod.rs  service.rs
src/db/: mod.rs  queries.rs  schema.rs
src/mcp/: mod.rs  tools.rs
src/query/: mod.rs
src/waste/: mod.rs  rules.rs
tests/: cli_test.rs  functional_verify.rs  integration_test.rs
