[package]
name = "disk-inventory"
version = "0.1.0"
edition = "2021"
description = "Fast disk usage analysis with MCP, CLI, and daemon interfaces"
license = "MIT"

[[bin]]
name = "disk-inventory"
path = "src/main.rs"

[dependencies]
# MCP
rmcp = { version = "1.4", features = ["server", "transport-io"] }
schemars = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# CLI
clap = { version = "4", features = ["derive"] }
comfy-table = "7"

# Filesystem
jwalk = "0.8"
notify = "7"
libc = "0.2"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling & logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
